--- a/_gulp/_jade/ua-special-offers.jade
+++ b/_gulp/_jade/ua-special-offers.jade
@@ -107,7 +107,7 @@ html(lang="ru")
               // Pagination
               .pagination
                 ul
-                  li: span.line
+                  li.hidden-xs: span.line
                   li: a(href="#") 1
                   li: a(href="#") 2
                   li: a(href="#") 3
@@ -116,7 +116,7 @@ html(lang="ru")
                   li: a(href="#") 6
                   li: span ...
                   li: a(href="#") 99
-                  li: span.line
+                  li.hidden-xs: span.line
       
       include ./_include/_footer
       //- div(style="height: 900px; background-color: #000")
