--- a/_gulp/_jade/news.jade
+++ b/_gulp/_jade/news.jade
@@ -209,7 +209,7 @@ html(lang="ru")
             // Pagination
             .pagination
               ul
-                li: span.line
+                li.hidden-xs: span.line
                 li: a(href="#") 1
                 li: a(href="#") 2
                 li: a(href="#") 3
@@ -218,7 +218,7 @@ html(lang="ru")
                 li: a(href="#") 6
                 li: span ...
                 li: a(href="#") 99
-                li: span.line
+                li.hidden-xs: span.line
 
 
     include ./_include/_footer
