--- a/_gulp/_jade/index.jade
+++ b/_gulp/_jade/index.jade
@@ -8,12 +8,12 @@ html(lang="ru")
 
   include ./_include/_head
 
-  body
+  body.out
 
     // Preloader
     //- include ./_include/_preloader
 
-    #body__main.body__main
+    .body__main
       canvas#bg-animation
 
       .body__main__wrapper
