--- a/_gulp/_jade/ua-payment-details.jade
+++ b/_gulp/_jade/ua-payment-details.jade
@@ -78,12 +78,12 @@ html(lang="ru")
                     .col-sm-6.col-xs-12
                       .form-group.form-group--has-icon
                         label.hidden Дата от
-                        input(type="text" placeholder="Дата от" data-auto-close="true").form-control.form-control--dark.datepicker-here
+                        input(type="text" placeholder="Дата от" data-auto-close="true" readonly).form-control.form-control--dark.datepicker-here
                         i.ion-android-calendar
                     .col-sm-6.col-xs-12
                       .form-group.form-group--has-icon
                         label.hidden Дата до
-                        input(type="text" placeholder="Дата до" data-auto-close="true").form-control.form-control--dark.datepicker-here
+                        input(type="text" placeholder="Дата до" data-auto-close="true" readonly).form-control.form-control--dark.datepicker-here
                         i.ion-android-calendar
                   .row
                     .col-sm-6.col-xs-12
