--- a/_gulp/_jade/index-canvas.jade
+++ b/_gulp/_jade/index-canvas.jade
@@ -8,12 +8,12 @@ html(lang="ru")
 
   include ./_include/_head
 
-  body
+  body.out
 
     // Preloader
     //- include ./_include/_preloader
 
-    #body__main.body__main
+    .body__main
       canvas#bg-animation
 
       div(style="height: 2000px")
